--- a/CSharp_Selenium_Examples/CSharp_Selenium_Examples/packages.config
+++ b/CSharp_Selenium_Examples/CSharp_Selenium_Examples/packages.config
@@ -5,6 +5,8 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.5.0" targetFramework="net452" />
-  <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.0.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.0.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.25.0.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.IEDriver" version="3.0.0.0" targetFramework="net452" />
 </packages>
