--- a/CSharp_Selenium_Examples/CSharp_Selenium_Examples/CSharp_Selenium_Examples.csproj
+++ b/CSharp_Selenium_Examples/CSharp_Selenium_Examples/CSharp_Selenium_Examples.csproj
@@ -63,14 +63,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Applications\TheInternetApp\HomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\BaseTest.cs" />
     <Compile Include="Tests\LeanFtTest1.cs" />
+    <Compile Include="Utilities\Properties.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Applications\" />
     <Folder Include="Core\" />
-    <Folder Include="Utilities\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
