--- a/CSharp_Selenium_Examples/CSharp_Selenium_Examples/CSharp_Selenium_Examples.csproj
+++ b/CSharp_Selenium_Examples/CSharp_Selenium_Examples/CSharp_Selenium_Examples.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BaseTest.cs" />
     <Compile Include="Tests\POMExampleTest.cs" />
+    <Compile Include="Tests\HeadlessSimpleTest.cs" />
+    <Compile Include="Tests\ParameterizedSimpleTest.cs" />
     <Compile Include="Tests\SimpleTest.cs" />
     <Compile Include="Utilities\Properties.cs" />
     <None Include="packages.config" />
@@ -77,7 +79,14 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\packages\PhantomJS.2.1.1\tools\phantomjs\phantomjs.exe">
+      <Link>phantomjs.exe</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Drivers\chromedriver.exe" />
+    <Content Include="phantomjs-license.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.2.25.0.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.2.25.0.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
